[project]
name = "diet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "python-telegram-bot[job-queue,webhooks]>=21.6",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
